Changed the title and added an h1 tag.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>WildCodeSchooler</title>
   </head>
   <body>
-  
+    
+    <h1>Adding an h1 tag</h1>
+
   </body>
 </html>
